[package]
name = "webrender-test"
version = "0.1.0"
authors = ["Kevin Mehall <km@kevinmehall.net>"]

[dependencies]
glutin = "0.4"
gleam = "0.2"
euclid = "0.6"

[dependencies.webrender_traits]
git = "https://github.com/servo/webrender_traits"

[dependencies.webrender]
git = "https://github.com/servo/webrender"
